--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/raja.jpeg">
+            <img class="avatar" src="raja.jpeg">
             <div >
                 <h3>Rajadurai</h3>
                 <p>age:27</p>
